# DoomFire

./: .gitignore  CMakeLists.txt  README.md
include/: Application.h  Fire.h  Window.h
src/: Application.cpp  Fire.cpp  Window.cpp  main.cpp
